fixing iFrame issue with Height on Mobile

--- a/mobile.css
+++ b/mobile.css
@@ -130,3 +130,7 @@ margin-top: 3px;
 .bottom-image {
 background-color: black;
 }
+
+.resume-container iframe {
+    height: 600;
+  }
